myteo/test/analyze/type_check/array/incorrect_type_arity_error.myte
module test

import std.array.Array

fun main() {
  (1: Array);
  (1: Array<Int, Int>);
}